# SystemAIR-API

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
api/: systemair_api.py  websocket_client.py
auth/: authenticator.py
docs/source/: installation.rst
models/: ventilation_data.py  ventilation_unit.py
systemair_api/: __init__.py  __main__.py
systemair_api/api/: systemair_api.py  websocket_client.py
systemair_api/auth/: authenticator.py
systemair_api/models/: ventilation_data.py  ventilation_unit.py
systemair_api/utils/: constants.py  register_constants.py
tests/: conftest.py  test_api_connect.py  test_authenticator.py  test_integration.py  test_systemair_api.py  test_ventilation_unit.py  test_websocket_client.py
utils/: constants.py  register_constants.py
